<resources>
    <string name="app_name">AlarmClock</string>
    <string name="toolBar_title">闹钟</string>
    <string name="newClock_title">新建闹钟</string>
    <string name="morning_chinese">上午</string>
    <string name="afternoon_chinese">下午</string>
    //闹钟显示
    <string name="morning">凌晨 12:%1$s 闹钟响</string>
    <string name="afternoon">中午 12:%1$s 闹钟响</string>
    <string name="lessThanOneMinute">不到1分钟后闹钟响</string>
    <string name="justMinute">%1$d分钟后闹钟响</string>
    <string name="justHour">%1$d小时后闹钟响</string>
    <string name="justDay">%1$d天后闹钟响</string>
    <string name="clockTime">%1$d小时%2$d分钟后闹钟响"</string>
    <string name="clockTimeWithDay">%1$d天%2$d小时%3$d分钟后闹钟响"</string>
    <string name="clockTimeWithDayNoMinute">%1$d天%2$d小时后闹钟响"</string>
    <string name="clockTimeWithDayNoHour">%1$d天%2$d分钟后闹钟响"</string>
    <string name="defaultTimeTip">23小时59分钟后闹钟响</string>
    //
    <string name="complete">完成</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="repetition">重复</string>
    <string name="non_repetition">不重复</string>
    <string name="everyDay">每天</string>
    <string name="tag">标签</string>
    <string name="ring">铃声</string>
    <string name="shake">震动</string>
    <string name="custom">自定义</string>
    <string name="addTag">添加标签</string>
    <string name="none">无</string>
    <string name="monday">每周一</string>
    <string name="tuesday">每周二</string>
    <string name="wednesday">每周三</string>
    <string name="thursday">每周四</string>
    <string name="friday">每周五</string>
    <string name="saturday">每周六</string>
    <string name="sunday">每周日</string>

    <string name="customRepetition">每周%1$s%2$s%3$s%4$s%5$s%6$s%7$s</string>
    <string name="selectedNumber">已选择 %1$d 项</string>

    <item name="tag_isChecked" type="id">0</item>
    <item name="tag_position" type="id">1</item>
</resources>
