<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.whut.umrhamster.myapplication.NewClockActivity">

    <!--导航栏-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/newClock_tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/themeColor"
        app:contentInsetStart="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="132dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/newClock_tb_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/newClock_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/newClock_complete_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="@string/complete"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/newClock_cancel_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <!--上下午选择-->
    <NumberPicker
        android:id="@+id/newClock_roughTime_np"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:layout_below="@id/newClock_tb"
        android:layout_toStartOf="@id/newClock_hour_np"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"/>
    <!--小时选择-->
    <NumberPicker
        android:id="@+id/newClock_hour_np"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:layout_below="@id/newClock_tb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <!--分钟选择-->
    <NumberPicker
        android:id="@+id/newClock_minute_np"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:layout_below="@id/newClock_tb"
        android:layout_toEndOf="@id/newClock_hour_np"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"/>
    <!--闹钟时间提示-->
    <TextView
        android:id="@+id/newClock_timeTip_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/defaultTimeTip"
        android:layout_below="@id/newClock_hour_np"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>
    <!--其他设置-->
    <!--分割线-->
    <View
        android:id="@+id/viewOne"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bfbfbf"
        android:layout_below="@id/newClock_timeTip_tv"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <!--重复设置-->
    <RelativeLayout
        android:id="@+id/newClock_repetition_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/viewOne"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repetition"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>
        <ImageView
            android:id="@+id/repetition_right"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/right"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"/>
        <TextView
            android:id="@+id/newClock_repetition_show_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non_repetition"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/repetition_right"
            android:layout_marginEnd="5dp"/>
    </RelativeLayout>
    <!--分割线-->
    <View
        android:id="@+id/viewTwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bfbfbf"
        android:layout_below="@id/newClock_repetition_rl"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <!--铃声设置-->
    <RelativeLayout
        android:id="@+id/newClock_ring_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/viewTwo"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ring"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>
        <ImageView
            android:id="@+id/ring_right"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/right"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"/>
        <TextView
            android:id="@+id/newClock_ring_show_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/ring_right"
            android:layout_marginEnd="5dp"/>
    </RelativeLayout>
    <!--分割线-->
    <View
        android:id="@+id/viewThree"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bfbfbf"
        android:layout_below="@id/newClock_ring_rl"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <!--标签-->
    <RelativeLayout
        android:id="@+id/newClock_tag_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/viewThree"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>
        <ImageView
            android:id="@+id/tag_right"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/right"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"/>
        <TextView
            android:id="@+id/newClock_tag_show_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/tag_right"
            android:layout_marginEnd="5dp"/>
    </RelativeLayout>
    <!--分割线-->
    <View
        android:id="@+id/viewFour"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bfbfbf"
        android:layout_below="@id/newClock_tag_rl"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <!--震动-->
    <RelativeLayout
        android:id="@+id/newClock_shake_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/viewFour"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shake"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>
        <Switch
            android:id="@+id/newClock_shake_st"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"/>
    </RelativeLayout>

</RelativeLayout>
