<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_cornerbg">
    <TextView
        android:id="@+id/customEdtDialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTag"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/customEdtDialog_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:maxLines="1"
        android:maxLength="10"
        android:inputType="text"
        android:labelFor="@id/customEdtDialog_et"
        android:background="@drawable/cusomeditdialog_edit_bg"
        android:layout_below="@id/customEdtDialog_title"
        android:padding="5dp"
        android:layout_margin="16dp"/>
    <View
        android:id="@+id/viewHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#bfbfbf"
        android:layout_below="@id/customEdtDialog_et"
        android:layout_marginTop="20dp" />
    <LinearLayout
        android:id="@+id/customEditDialog_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/viewHorizontal">
        <TextView
            android:id="@+id/customEditDialog_cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/customeditdialog_btn_left_bg"
            android:gravity="center"/>
        <TextView
            android:id="@+id/customEditDialog_ok_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/customeditdialog_btn_right_bg"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="0.5dp"
        android:layout_height="wrap_content"
        android:background="#bfbfbf"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/viewHorizontal"
        android:layout_alignTop="@id/viewHorizontal"
        android:layout_alignBottom="@id/customEditDialog_rl"/>
</RelativeLayout>