<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whiteColor">
    <TextView
        android:id="@+id/customDialog_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repetition"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <View
        android:id="@+id/customDialog_viewOne"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dbdbdb"
        android:layout_below="@id/customDialog_title_tv"/>
    <!--不重复-->
    <RelativeLayout
        android:id="@+id/customDialog_non_repetition_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customDialog_viewOne"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/non_repetition"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>
        <ImageView
            android:id="@+id/customDialog_non_repetition_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/choose"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            android:contentDescription="@null"/>
    </RelativeLayout>
    <View
        android:id="@+id/customDialog_viewTwo"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:background="#dbdbdb"
        android:layout_below="@id/customDialog_non_repetition_rl"/>
    <!--每天-->
    <RelativeLayout
        android:id="@+id/customDialog_everyday_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customDialog_viewTwo"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/everyDay"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>
        <ImageView
            android:id="@+id/customDialog_everyday_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/choose"
            android:visibility="invisible"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@null"/>
    </RelativeLayout>
    <View
        android:id="@+id/customDialog_viewThree"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:background="#dbdbdb"
        android:layout_below="@id/customDialog_everyday_rl"/>
    <!--自定义时间-->
    <RelativeLayout
        android:id="@+id/customDialog_customTime_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customDialog_viewThree"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>
        <ImageView
            android:id="@+id/customDialog_customTime_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/choose"
            android:visibility="invisible"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@null"/>
    </RelativeLayout>
    <View
        android:id="@+id/customDialog_viewFour"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#cdcdcd"
        android:layout_below="@id/customDialog_customTime_rl"/>
    <TextView
        android:id="@+id/customDialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/customDialog_viewFour"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg"/>
</RelativeLayout>