<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whiteColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--标题-->
    <TextView
        android:id="@+id/customWeekDialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"/>
    <!--分割线-->
    <View
        android:id="@+id/weekOne"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dbdbdb"
        android:layout_below="@id/customWeekDialog_title"/>
    <!--每周一-->
    <RelativeLayout
        android:id="@+id/customWeekDialog_monday_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg"
        android:layout_below="@id/weekOne">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="16dp"/>
        <com.whut.umrhamster.myapplication.CustomUI.SmoothCheckBox
            android:id="@+id/customWeekDialog_monday_scb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            app:stroke_width="2dp"
            app:color_checked="@color/colorAccent"/>
    </RelativeLayout>
    <!--分割线-->
    <View
        android:id="@+id/weekTwo"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dbdbdb"
        android:layout_marginStart="16dp"
        android:layout_below="@id/customWeekDialog_monday_rl"/>
    <!--每周二-->
    <RelativeLayout
        android:id="@+id/customWeekDialog_tuesday_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg"
        android:layout_below="@id/weekTwo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="16dp"/>
        <com.whut.umrhamster.myapplication.CustomUI.SmoothCheckBox
            android:id="@+id/customWeekDialog_tuesday_scb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            app:stroke_width="2dp"
            app:color_checked="@color/colorAccent"/>
    </RelativeLayout>
    <!--分割线-->
    <View
        android:id="@+id/weekThree"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dbdbdb"
        android:layout_marginStart="16dp"
        android:layout_below="@id/customWeekDialog_tuesday_rl"/>
    <!--每周三-->
    <RelativeLayout
        android:id="@+id/customWeekDialog_wednesday_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg"
        android:layout_below="@id/weekThree">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="16dp"/>
        <com.whut.umrhamster.myapplication.CustomUI.SmoothCheckBox
            android:id="@+id/customWeekDialog_wednesday_scb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            app:stroke_width="2dp"
            app:color_checked="@color/colorAccent"/>
    </RelativeLayout>
    <!--分割线-->
    <View
        android:id="@+id/weekFour"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dbdbdb"
        android:layout_marginStart="16dp"
        android:layout_below="@id/customWeekDialog_wednesday_rl"/>
    <!--每周四-->
    <RelativeLayout
        android:id="@+id/customWeekDialog_thursday_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg"
        android:layout_below="@id/weekFour">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="16dp"/>
        <com.whut.umrhamster.myapplication.CustomUI.SmoothCheckBox
            android:id="@+id/customWeekDialog_thursday_scb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            app:stroke_width="2dp"
            app:color_checked="@color/colorAccent"/>
    </RelativeLayout>
    <!--分割线-->
    <View
        android:id="@+id/weekFive"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dbdbdb"
        android:layout_marginStart="16dp"
        android:layout_below="@id/customWeekDialog_thursday_rl"/>
    <!--每周五-->
    <RelativeLayout
        android:id="@+id/customWeekDialog_friday_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg"
        android:layout_below="@id/weekFive">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="16dp"/>
        <com.whut.umrhamster.myapplication.CustomUI.SmoothCheckBox
            android:id="@+id/customWeekDialog_friday_scb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            app:stroke_width="2dp"
            app:color_checked="@color/colorAccent"/>
    </RelativeLayout>
    <!--分割线-->
    <View
        android:id="@+id/weekSix"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dbdbdb"
        android:layout_marginStart="16dp"
        android:layout_below="@id/customWeekDialog_friday_rl"/>
    <!--每周六-->
    <RelativeLayout
        android:id="@+id/customWeekDialog_saturday_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg"
        android:layout_below="@id/weekSix">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="16dp"/>
        <com.whut.umrhamster.myapplication.CustomUI.SmoothCheckBox
            android:id="@+id/customWeekDialog_saturday_scb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            app:stroke_width="2dp"
            app:color_checked="@color/colorAccent"/>
    </RelativeLayout>
    <!--分割线-->
    <View
        android:id="@+id/weekSeven"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dbdbdb"
        android:layout_marginStart="16dp"
        android:layout_below="@id/customWeekDialog_saturday_rl"/>
    <!--每周日-->
    <RelativeLayout
        android:id="@+id/customWeekDialog_sunday_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/newclock_set_bg"
        android:layout_below="@id/weekSeven">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="16dp"/>
        <com.whut.umrhamster.myapplication.CustomUI.SmoothCheckBox
            android:id="@+id/customWeekDialog_sunday_scb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:stroke_width="2dp"
            app:color_checked="@color/colorAccent"/>
    </RelativeLayout>
    <!--分割线-->
    <View
        android:id="@+id/customWeekDialog_viewHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#dbdbdb"
        android:layout_below="@id/customWeekDialog_sunday_rl"/>
    <LinearLayout
        android:id="@+id/customWeekDialog_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/customWeekDialog_viewHorizontal">
        <TextView
            android:id="@+id/customWeekDialog_cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/newclock_set_bg"
            android:padding="16dp"/>
        <TextView
            android:id="@+id/customWeekDialog_ok_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/newclock_set_bg"
            android:padding="16dp"/>
    </LinearLayout>
    <View
        android:layout_width="0.5dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#dbdbdb"
        android:layout_alignTop="@id/customWeekDialog_viewHorizontal"
        android:layout_alignBottom="@id/customWeekDialog_ll"/>
</RelativeLayout>